--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@
     position: relative;
     background-size: cover;
     background-image: url(../files/bg-home.jpg);
+    background-attachment: fixed;
     height: 100vh;
 }
 
@@ -316,11 +317,16 @@
     color: white;
     padding: 15px 40px;
     border: none;
+    border-radius: 3px;
     margin-top: 15px;
     font-weight: bold;
     text-transform: uppercase;
 }
-
+.appointment button:hover {
+    font-size: 14px;
+    border-radius: 5px;
+    background-color: #3c2915c8;
+}
 
 /***********
     GALLERY
@@ -361,4 +367,77 @@
 
 .gallery .gallery-wrapper div img{
     width: 100%;
+}
+
+
+
+
+/***********
+    LOCATION
+************/
+
+.location {
+    padding: 100px 0;
+    background-image: url(../files/bg-location.jpg);
+    background-size: cover;
+}
+
+.location .head {
+    display: flex;
+    justify-content: space-between;
+    background-color: #191919;
+    padding: 40px;
+    width: 100%;
+}
+
+.location .head .info {
+    display: flex;
+    align-items: center;
+}
+
+.location .head .info .icon {
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border: 1px solid var(--color-primary);
+    border-radius: 100%;
+    width: 50px;
+    height: 50px;
+    margin-right: 15px;
+}
+
+.location .head .info .text span {
+    display: block;
+    font-size: 13px;
+}
+
+.location .head .info .text span:first-child {
+    color: silver;
+}
+
+.location .head .info .text span:last-child {
+    color: white;
+}
+
+.location .map {
+    width: 100%;
+}
+
+.location .map iframe {
+    width: 100%;
+}
+
+
+/***********
+    FOOTER
+************/
+
+.footer {
+    background-color: #191919;
+    color: white;
+    padding: 40px;
+    text-align: center;
+    font-size: 14px;
 }
